[tool.poetry]
name = "Nissan Leaf OBD-II manual"
version = "0.1.0"
description = "Guide to the Nissan Leaf CAN bus."
authors = ["Seth Fischer <seth@fischer.nz>"]
license = "CC-BY-4.0"

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-bibtex = "^2.4.1"
sphinxcontrib-spelling = "^7.3.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pyserial = "^3.5"
rope = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
