[tool.poetry]
name = "Nissan Leaf OBD-II manual"
version = "0.1.0"
description = "Guide to the Nissan Leaf CAN bus."
authors = ["Seth Fischer <seth@fischer.nz>"]
license = "CC-BY-4.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

Sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
sphinxcontrib-bibtex = "^2.6.3"
sphinxcontrib-spelling = "^8.0.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
pyserial = "^3.5"
rope = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
